--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -352,13 +352,16 @@
     }
    ],
    "source": [
-    "#informações vazias ou no formato errado\n",
+    "#Passo3: Corrigir os problemas da base de dados\n",
+    "# #informações vazias ou no formato errado\n",
     "#display(tabela.info())\n",
     "tabela = tabela.dropna()\n",
+    "#tabela = tabela.drop_duplicates() joga uma informações causo existam duas iguais\n",
+    "\n",
     "display(tabela.info())\n",
     "#object é texto\n",
     "\n",
-    "#Passo3: Corrigir os problemas da base de dados\n",
+    "\n",
     "\n",
     "#Passo4: Análise dos cancelamentos(quantos cancelaram, quantos não, qual a %)\n",
     "\n",
@@ -367,10 +370,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cancelou\n",
+       "1.0    499993\n",
+       "0.0    381666\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "cancelou\n",
+       "1.0    0.567105\n",
+       "0.0    0.432895\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Passo4: Análise dos cancelamentos(quantos cancelaram, quantos não, qual a %)\n",
+    "display(tabela[\"cancelou\"].value_counts()) \n",
+    "\n",
+    "# exibir em percentual = normalizado\n",
+    "display(tabela[\"cancelou\"].value_counts(normalize=True))"
+   ]
   }
  ],
  "metadata": {
