--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "#tabela = pd.read_csv(\"cancelamentos_sample.csv\")\n",
+    "tabela = pd.read_csv(\"cancelamentos.csv\")\n",
     "\n",
     "#Passo 2: Visualizar a base de dados\n",
     "    #entender quais informações eu tenho disponíveis\n",
